==================================================
Commit Hash: d2d3662ab053b6f7a9320285977a618a11964057
Author: Niwatori401
Date: Fri Jun 21 04:26:07 2024

Make Novatech gloves mutually exclusive with VAE gloves

==================================================
Commit Hash: 5e75c5f1e309f5a11bfb7105e9bfbbf6213e0725
Author: Niwatori401
Date: Fri Jun 21 04:25:28 2024

Fix earlier typo for recipe products

==================================================
Commit Hash: 832266a96d91de309fb6a25cd48dd68e163c34b7
Author: Niwatori401
Date: Fri Jun 21 03:21:51 2024

Fix error in huge fine meal recipe

==================================================
Commit Hash: c2148c54a1f5fe72f71b8d57df1e8be353e33754
Author: Niwatori401
Date: Thu Jun 20 05:28:41 2024

Modify gitignore

==================================================
Commit Hash: b2fa7b46afcfff1e5a0621982a64ced63b2159be
Author: Niwatori401
Date: Thu Jun 20 05:25:10 2024

Change work to make for SSFF

==================================================
Commit Hash: 2b65effb8f75533d4b29a6d3ef085595a8ebbeb4
Author: Niwatori401
Date: Thu Jun 20 04:59:08 2024

Fix various typos

==================================================
Commit Hash: 141cfbc9eb2b29e93c4ac72f805d4a5c6e6e2b8a
Author: Niwatori401
Date: Thu Jun 20 04:45:56 2024

Make diet control, blanket visibility and sleeping direction gizmos
invisible for non-colony pawns

==================================================
Commit Hash: 0c2c82d4acfa0fcdb97006595586053ac0c0829e
Author: Niwatori401
Date: Thu Jun 20 03:37:27 2024

Balance crafting recipes for hunger implant
Balance crafting recipes for bionic metabolizer
Balance stats for food net machines
fix icon oversight for head offset debug widget

==================================================
Commit Hash: 41dee1764cf4ad12c2b7adaed7959053053200c4
Author: Niwatori401
Date: Thu Jun 20 00:14:22 2024

Fix compatibility issue with Camera+
Failing to patch external mods is no longer fatal
