@@ -34,15 +34,16 @@
     <useHitPoints>false</useHitPoints>
     <healthAffectsPrice>false</healthAffectsPrice>
     <statBases>
-      <MarketValue>14</MarketValue>
-      <Mass>0.25</Mass>
-      <StuffPower_Armor_Sharp>1.14</StuffPower_Armor_Sharp>
-      <StuffPower_Armor_Blunt>0.55</StuffPower_Armor_Blunt>
-      <StuffPower_Armor_Heat>0.65</StuffPower_Armor_Heat>
-      <StuffPower_Insulation_Cold>3</StuffPower_Insulation_Cold>
+      <MarketValue>21</MarketValue>
+      <Mass>3</Mass>
+	  <Beauty>-1</Beauty>
+      <StuffPower_Armor_Sharp>1.25</StuffPower_Armor_Sharp>
+      <StuffPower_Armor_Blunt>0.90</StuffPower_Armor_Blunt>
+      <StuffPower_Armor_Heat>1.05</StuffPower_Armor_Heat>
+      <StuffPower_Insulation_Cold>8</StuffPower_Insulation_Cold>
       <StuffPower_Insulation_Heat>0</StuffPower_Insulation_Heat>
-      <SharpDamageMultiplier>1.1</SharpDamageMultiplier>
-      <BluntDamageMultiplier>0.9</BluntDamageMultiplier>
+      <SharpDamageMultiplier>1.2</SharpDamageMultiplier>
+      <BluntDamageMultiplier>1.7</BluntDamageMultiplier>
     </statBases>
     <thingCategories>
       <li>Manufactured</li>
@@ -65,12 +66,13 @@
       <soundMeleeHitSharp>MeleeHit_Metal_Sharp</soundMeleeHitSharp>
       <soundMeleeHitBlunt>MeleeHit_Metal_Blunt</soundMeleeHitBlunt>
       <statFactors>
-        <MaxHitPoints>2.8</MaxHitPoints>
-        <Beauty>1</Beauty>
+        <MaxHitPoints>3.3</MaxHitPoints>
+        <Beauty>1.5</Beauty>
         <Flammability>0</Flammability>
-        <WorkToMake>2.2</WorkToMake>
-        <WorkToBuild>2.2</WorkToBuild>
-        <MeleeWeapon_CooldownMultiplier>0.8</MeleeWeapon_CooldownMultiplier>
+        <WorkToMake>2.4</WorkToMake>
+        <WorkToBuild>2.4</WorkToBuild>
+		<ResearchSpeedFactor>1.7</ResearchSpeedFactor>
+        <MeleeWeapon_CooldownMultiplier>0.95</MeleeWeapon_CooldownMultiplier>
       </statFactors>
     </stuffProps>
     <terrainAffordanceNeeded>Medium</terrainAffordanceNeeded>
